--- a/views/begin.html
+++ b/views/begin.html
@@ -108,7 +108,7 @@ animation: fadeIn ease 20s;
 <body>
     <h1>
       <span class="text-wrapper">
-            <span class="letters">Sigue el camino de pétalos</span>
+            <span class="letters">Ves un rastro de pétalos ¿Qué haces?</span>
       </span>
     </h1>
     <img class="lighto" src="/assets/light.gif">
@@ -168,12 +168,7 @@ animation: fadeIn ease 20s;
     var count = 0;
 
     var msgs = [
-        'ellos te marcarán el camino',
-        'Pero ten cuidado',
-        'el sendero alberga horrores',
-        'mas no temas',
-        'mientras no te alejes del camino',
-        'todo irá bien'
+        'En contrucción',
         ];
 
     $(document).click(() => {
