--- a/views/index.html
+++ b/views/index.html
@@ -1,29 +1,34 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Narysium rol</h1>
-<p>
-    Hubo una vez, un mestizo que robó la magia cierta fecha caprichosa en el vigésimo noveno día del segundo mes del año, y desde entonces, dicho día sólo aparece en los calendarios cada cuatro años. Ese mestizo se llamaba Lilias, quien buscaba desesperado un lugar donde ponerse a salvo del genocido que pretendía erradicar la magia de la tierra, trató de huir lejos mediante un arriesgado ritual. 
-    <br><br>
-
-    Así, desamparado, abusando de su poder, Lilias llegó por accidente a un lugar sin caminos ni direcciones, una oscuridad absoluta en un vacío sepulcral. Incluso la nada se le hacía compasiva en retrospectiva de aquel destino que habría supuesto una muerte segura.
-    <br><br>
-
-    El mestizo sintió algo reposar en su nariz. Brillaba. Elevó sus manos para sostenerlo y tratar de examinarlo, pero antes siquiera de rozarlo se alejó de él como si una corriente de aire se lo llevara, a pesar de no sentirse una brisa. Alejándose una distancia prudencial, frente a él se formó una rosa blanca, que alumbraba el vacío con majestuosidad. Se acercó, y por alguna razón sintió en sus manos la capacidad de remodelar aquel vacío a su voluntad ¿Pero a qué costo? 
-    <br><br>
-
-    Lo comprendió en cuanto empezó a toquetear con aquel poder. Tenía la capacidad de llevarse consigo la magia del mundo que había dejado atrás, de darles un lugar a los suyos, sin embargo, sentía como a medida que los reunía, a medida que iba creando el mundo para ellos, su ser se iba consumiendo. No tenía la fortaleza para soportar la carga de tal energía, por lo que no fue capaz de completar el sello que aislaría el mundo del resto, lo que abriría el nexo de unión, siendo accesible durante esa misma fecha, o mediante atajos como portales.
-    <br><br><br>
+<p class="fl">
+    Hubo una vez, un mestizo que huyó de la muerte. Queriendo ponerse a salvo a él y a su gente llevó a cabo un arriesgado ritual que consumió su vida para dar forma a un mundo nuevo, Narysium, que sirviera de cobijo a los suyos, robando la magia del mundo de origen... Cierta fecha caprichosa en el vigésimo noveno día del segundo mes del año. Así, dicha fecha desaparecía de los calendarios, un día secuestrado por un mundo mágico que sólo conectaba con el mundo humano de cuatro en cuatro años. Tan sólo un día era el tiempo en que la magia era devuelta a su origen, para después volver a desaparecer.<br><br>
+</p>
 
     <center>❃ ❃ ❃</center>
-    <br><br><br>
+    <br><br>
+<p>
+    Una colosal academia rodeada por cadenas montañosas en el centro rige el destino de Narysium. El consejo guía a las nuevas promesas y mantiene el orden en el continente de cuyas fronteras, más allá de las aguas, se hallan en penumbra. Un mundo plano, cuyo día y noche se guían por la cúpula celeste, de la que más allá solo hay noche y luego nada. Diversas naciones han crecido al son de la academia y algunas se nutren de ella para su sustento, pero no todas. 
+    <br><br>
 
-    <p>
-        Una colosal academia rodeada por cadenas montañosas en el centro rige el destino de Narysium. El consejo guía a las nuevas promesas y mantiene el orden en el continente de cuyas fronteras, más allá de las aguas, se hallan en penumbra. Diversas naciones han crecido al son de la academia y algunas se nutren de ella para su sustento, pero no todas. 
-        <br><br>
-        
-        Desde las diversas naciones sumergidas en el mar de Narysium, pasando por las costas de Arcada y los bosques de Corianand hasta las dunas de Olvion, conviven criaturas fantásticas y habitantes tocados por la magia. Estudiar el la academia magna es un privilegio que no todos pueden permitirse pues necesitan una carta de presentación elaborada por un mentor errante. Aquellos que deciden seguir otra vía deben pasar una prueba de ingreso en presencia del consejo. 
-        <br><br>
-    </p>
-   
-   
+    Desde las diversas naciones sumergidas en el mar de Narysium, pasando por las costas de Arcada y los bosques de Corianand hasta las dunas de Olvion, conviven criaturas fantásticas y habitantes tocados por la magia. 
+    <br><br>
+
+    Estudiar en la academia magna es un privilegio que sólo pocos pueden permitirse, pues necesitan una carta de presentación elaborada por un mentor errante. Aquellos que deciden seguir otra vía deben pasar una prueba de ingreso en presencia del consejo, así como su aprobación.
+    <br><br>
+
+    Cuando alguien nuevo llega a Narysium, al momento es protegido bajo el amparo de uno de los tres espíritus capaz de ver el alma, cuya presencia se materializa en cuatro espadas totémicas colosales que vagan flotando por el cielo en círculos. Estos espíritus son:
+    <br>
+    <br><b>— El aventurero.</b> Su espada dorada adorna el cielo y custodia a los expontáneos y enérgicos, maestros de la experimentación, aquellos quienes siempre buscan una manera de innovarse.
+    <br><br><b>— El crítico.</b> El índigo representa el color de su espada, cobija a todos aquellos guiados por el espíritu de la imaginación, a los audaces, astutos y curiosos. Muy lógicos, tanto, que cualquier reto intelectual no es obstáculo para ellos.
+    <br><br><b>— El sutil.</b> Verde como la paz y la armonía de la naturaleza. Se de dica a cuidar de los incomprendidos, silenciosos pero inspiradores. Entusiastas, creativos, a veces optimstas y altruistas, pero sobre todo los marca su idealismo.
+    <br><br><b>— El observador.</b> Su azul celeste, pasa disimulado durante el día, pero durante la noche brilla casi tanto como una estrella. Cuida de aquellos enfocados en lo que es práctico, organizados, custodios y protectores, entregados por el ajeno.
+    
+
 </p>
+
+
+    
+   
+   
+
 <%- include(`./partials/bot-part.html`) %>
