--- a/public/less/main.less
+++ b/public/less/main.less
@@ -88,7 +88,7 @@ p {
     float: left;
 }*/
 
-.wrapper p::first-letter {
+.wrapper p.fl::first-letter {
     font-size: 4.1em;
     font-family: kaisg;
     margin: 3px 9px -2px 0px;
@@ -98,6 +98,10 @@ p {
     color: #fff;
     padding: 0px 10px;
     box-shadow: inset 0 0 0 4px #000000, inset 0 0 0 5px white;
+}
+
+img {
+    width: 100%;
 }
 
 .inner_wrapper {
