--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
     Cuando alguien nuevo llega a Narysium, al momento es protegido bajo el amparo de uno de los tres espíritus capaz de ver el alma, cuya presencia se materializa en cuatro espadas totémicas colosales que vagan flotando por el cielo en círculos. Estos espíritus son:
     <br>
     <br><b>— El aventurero.</b> Su espada dorada adorna el cielo y custodia a los expontáneos y enérgicos, maestros de la experimentación, aquellos quienes siempre buscan una manera de innovarse.
-    <br><br><b>— El crítico.</b> El índigo representa el color de su espada, cobija a todos aquellos guiados por el espíritu de la imaginación, a los audaces, astutos y curiosos. Muy lógicos, tanto, que cualquier reto intelectual no es obstáculo para ellos.
+    <br><br><b>— El crítico.</b> El índigo representa el color de su espada, cobija a todos aquellos guiados por el espíritu de la imaginación, a los audaces, astutos y curiosos. Manteniéndose en su lógico ningún reto intelectual será obstáculo para ellos.
     <br><br><b>— El sutil.</b> Verde como la paz y la armonía de la naturaleza. Se de dica a cuidar de los incomprendidos, silenciosos pero inspiradores. Entusiastas, creativos, a veces optimstas y altruistas, pero sobre todo los marca su idealismo.
     <br><br><b>— El observador.</b> Su azul celeste, pasa disimulado durante el día, pero durante la noche brilla casi tanto como una estrella. Cuida de aquellos enfocados en lo que es práctico, organizados, custodios y protectores, entregados por el ajeno.
     
