--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Narysium rol</h1>
 <p class="fl">
-    Hubo una vez, un mestizo que huyó de la muerte. Queriendo ponerse a salvo a él y a su gente llevó a cabo un arriesgado ritual que consumió su vida para dar forma a un mundo nuevo, Narysium, que sirviera de cobijo a los suyos, robando la magia del mundo de origen... Cierta fecha caprichosa en el vigésimo noveno día del segundo mes del año. Así, dicha fecha desaparecía de los calendarios, un día secuestrado por un mundo mágico que sólo conectaba con el mundo humano de cuatro en cuatro años. Tan sólo un día era el tiempo en que la magia era devuelta a su origen, para después volver a desaparecer.<br><br>
+    Hubo una vez, un mestizo que huyó de la muerte. Queriendo ponerse a salvo a él y a su gente llevó a cabo un arriesgado ritual que consumió su vida para dar forma a Narysium, un mundo nuevo, que sirviera de cobijo a los suyos, robando la magia del mundo de origen cierta fecha caprichosa en el vigésimo noveno día del segundo mes del año. Así, dicha fecha desaparecía de los calendarios, un día secuestrado por un mundo mágico que sólo conectaba con el mundo humano de cuatro en cuatro años. Tan sólo un día era el tiempo en que la magia era devuelta a su origen, para después volver a desaparecer.<br><br>
 </p>
 
     <center>❃ ❃ ❃</center>
@@ -16,12 +16,12 @@
     Estudiar en la academia magna es un privilegio que sólo pocos pueden permitirse, pues necesitan una carta de presentación elaborada por un mentor errante. Aquellos que deciden seguir otra vía deben pasar una prueba de ingreso en presencia del consejo, así como su aprobación.
     <br><br>
 
-    Cuando alguien nuevo llega a Narysium, al momento es protegido bajo el amparo de uno de los tres espíritus capaz de ver el alma, cuya presencia se materializa en cuatro espadas totémicas colosales que vagan flotando por el cielo en círculos. Estos espíritus son:
+    Cuando alguien nuevo llega a Narysium, al momento es protegido bajo el amparo de uno de los tres espíritus capaces de ver el alma, y cuya presencia se materializa en cuatro espadas totémicas colosales que vagan flotando por el cielo en círculos. Estos espíritus son:
     <br>
-    <br><b>— El aventurero.</b> Su espada dorada adorna el cielo y custodia a los expontáneos y enérgicos, maestros de la experimentación, aquellos quienes siempre buscan una manera de innovarse.
-    <br><br><b>— El crítico.</b> El índigo representa el color de su espada, cobija a todos aquellos guiados por el espíritu de la imaginación, a los audaces, astutos y curiosos. Manteniéndose en su lógico ningún reto intelectual será obstáculo para ellos.
-    <br><br><b>— El sutil.</b> Verde como la paz y la armonía de la naturaleza. Se de dica a cuidar de los incomprendidos, silenciosos pero inspiradores. Entusiastas, creativos, a veces optimstas y altruistas, pero sobre todo los marca su idealismo.
-    <br><br><b>— El observador.</b> Su azul celeste, pasa disimulado durante el día, pero durante la noche brilla casi tanto como una estrella. Cuida de aquellos enfocados en lo que es práctico, organizados, custodios y protectores, entregados por el ajeno.
+    <br><b>— El aventurero.</b> Su espada dorada adorna el cielo y custodia a aquellos dotados por la expontáneidad, a los enérgicos, maestros de la experimentación, aquellos quienes siempre buscan una manera de innovarse.
+    <br><br><b>— El crítico.</b> El índigo representa el color de su espada, cobija a todos aquellos guiados por el espíritu de la imaginación, a los audaces, astutos y curiosos. Manteniéndose lógicos, ningún reto intelectual será obstáculo para ellos.
+    <br><br><b>— El sutil.</b> Verde como la paz y la armonía de la naturaleza. Se dedica a cuidar de los incomprendidos, silenciosos pero inspiradores. Entusiastas, creativos, a veces optimistas y altruistas, pero sobre todo aquellos marcados por su idealismo.
+    <br><br><b>— El observador.</b> Su azul celeste pasa disimulado durante el día, pero durante la noche brilla casi tanto como una estrella. Cuida de aquellos enfocados en lo que es práctico, a los organizados, custodios y protectores, entregados por el ajeno.
     
 
 </p>
