--- a/views/begin.html
+++ b/views/begin.html
@@ -275,7 +275,7 @@ animation: fadeIn ease 20s;
         
             setTimeout(() => { 
                 $('.option1').html('Me hago bolita lamentando mi elección');
-                $('.option2').html('Los encaro y embisto contra ellos en un desesperado movimiento');
+                $('.option2').html('Los encaro y embisto contra ellos');
             },  35.2083 * y + 392.857  );
 
             trigger_changes();
