--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
     Una colosal academia rodeada por cadenas montañosas en el centro rige el destino de Narysium. El consejo guía a las nuevas promesas y mantiene el orden en el continente de cuyas fronteras, más allá de las aguas, se hallan en penumbra. Un mundo plano, cuyo día y noche se guían por la cúpula celeste, de la que más allá solo hay noche y luego nada. Diversas naciones han crecido al son de la academia y algunas se nutren de ella para su sustento, pero no todas. 
     <br><br>
 
-    Desde las diversas naciones sumergidas en el mar de Narysium, pasando por las costas de Arcada y los bosques de Corianand hasta las dunas de Olvion, conviven criaturas fantásticas y habitantes tocados por la magia. 
+    Desde las diversas naciones sumergidas en el mar de Narysium, pasando por las costas de Arcadia y los bosques de Corianand hasta las dunas de Olvion, conviven criaturas fantásticas y habitantes tocados por la magia. 
     <br><br>
 
     Estudiar en la academia magna es un privilegio que sólo pocos pueden permitirse, pues necesitan una carta de presentación elaborada por un mentor errante. Aquellos que deciden seguir otra vía deben pasar una prueba de ingreso en presencia del consejo, así como su aprobación.
