--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
     Estudiar en la academia magna es un privilegio que sólo pocos pueden permitirse, pues necesitan una carta de presentación elaborada por un mentor errante. Aquellos que deciden seguir otra vía deben pasar una prueba de ingreso en presencia del consejo, así como su aprobación.
     <br><br>
 
-    Cuando alguien nuevo llega a Narysium, al momento es protegido bajo el amparo de uno de los tres espíritus capaces de ver el alma, y cuya presencia se materializa en cuatro espadas totémicas colosales que vagan flotando por el cielo en círculos. Estos espíritus son:
+    Cuando alguien nuevo llega a Narysium, al momento es protegido bajo el amparo de uno de los cuatro espíritus capaces de ver el alma, y cuya presencia se materializa en cuatro espadas totémicas colosales que vagan flotando por el cielo en círculos. Estos espíritus son:
     <br>
     <br><b>— El aventurero.</b> Su espada dorada adorna el cielo y custodia a aquellos dotados por la expontáneidad, a los enérgicos, maestros de la experimentación, aquellos quienes siempre buscan una manera de innovarse.
     <br><br><b>— El crítico.</b> El índigo representa el color de su espada, cobija a todos aquellos guiados por el espíritu de la imaginación, a los audaces, astutos y curiosos. Manteniéndose lógicos, ningún reto intelectual será obstáculo para ellos.
