--- a/views/index.html
+++ b/views/index.html
@@ -22,8 +22,8 @@
     <br><br><b>— El crítico.</b> El índigo representa el color de su espada, cobija a todos aquellos guiados por el espíritu de la imaginación, a los audaces, astutos y curiosos. Manteniéndose lógicos, ningún reto intelectual será obstáculo para ellos.
     <br><br><b>— El sutil.</b> Verde como la paz y la armonía de la naturaleza. Se dedica a cuidar de los incomprendidos, silenciosos pero inspiradores. Entusiastas, creativos, a veces optimistas y altruistas, pero sobre todo aquellos marcados por su idealismo.
     <br><br><b>— El observador.</b> Su azul celeste pasa disimulado durante el día, pero durante la noche brilla casi tanto como una estrella. Cuida de aquellos enfocados en lo que es práctico, a los organizados, custodios y protectores, entregados por el ajeno.
-    
-
+    <br>
+    <center><a href="/map"><div class="button">Ir al mapa</div></a></center><br>
 </p>
 
 
