--- a/views/userlist.html
+++ b/views/userlist.html
@@ -1,6 +1,6 @@
 <%- include(`./partials/top-part.html`) %>
     <h1>Lista de miembros</h1>
-    <center><div class="button">Actualizar</div></center><br>
+    <center><div class="button bactualizar">Actualizar</div></center><br>
     <div id="memberlist">
         
         <table id="example" class="table table-bordered" cellspacing="0">
@@ -36,7 +36,9 @@
     </div>
     
     <script defer>
-    $(".button").click(() => {fetch('/statususer').then(location.reload());});  
+    $(".bactualizar").click(() => {
+        fetch('/statususer');
+    });  
     $(document).ready(() => {
         $('#example').DataTable({ 
             "language": { 
