--- a/views/map.html
+++ b/views/map.html
@@ -3,6 +3,10 @@
 <head>
     <%- include(`./layouts/inner_head.html`) %>
     <style>
+        body {
+            background: #04080a;
+            background-image: none;
+        }
         .map {
             width: 1500px;
             height: 1168px;
