--- a/public/less/main.less
+++ b/public/less/main.less
@@ -3,8 +3,8 @@
 @breakpoint-large: 60em; // 960px
 
 body {
-    background-color: rgb(0,0,0)!important;
-    background: linear-gradient(45deg, rgba(0,0,0,1) 0%, rgba(16,21,28,1) 100%)!important;
+    background-color: rgb(0,0,0);
+    background: linear-gradient(45deg, rgba(0,0,0,1) 0%, rgba(16,21,28,1) 100%);
     color: #fff;
     min-height: 697px;
     margin: 0px!important;
