--- a/views/map.html
+++ b/views/map.html
@@ -31,6 +31,7 @@
             width: 100px;
             height: 100px;
             border-radius: 0px;
+            box-shadow: none;
         }
     </style>
 </head>
